syntax = "proto3";

package route;

option go_package = "./proto";


message UserInfo {
  uint64 uid = 1;
}

message LoginRequest {
  enum MSGID {
    INVALID_MSGID = 0;
    ID = 100;
  }
  string token = 1;
}

message LoginResponse {
  enum MSGID {
    INVALID_MSGID = 0;
    ID = 101;
  }

  enum ErrCode {
    ok = 0;
    unkown_err = 1;
    invalid_token = 11;
  }
  ErrCode errcode = 1;
  UserInfo uinfo = 2;
}

message AccountLoginRequest {
  enum MSGID {
    INVALID_MSGID = 0;
    ID = 102;
  }
  string account = 1;
  string password = 2;
}

message AccountLoginResponse {
  enum MSGID {
    INVALID_MSGID = 0;
    ID = 103;
  }

  enum ErrCode {
    ok = 0;
    unkown_err = 1;
    invalid_token = 11;
  }
  ErrCode errcode = 1;
  UserInfo uinfo = 2;
}

message EchoRequest {
  enum MSGID {
    INVALID_MSGID = 0;
    ID = 104;
  }
  string msg = 1;
}

message EchoResponse {
  enum MSGID {
    INVALID_MSGID = 0;
    ID = 105;
  }
  string msg = 1;
}